# 124c41

./: .gitignore  404.html  README.md  docker-compose.yaml  index.html  makefile  mkdocs.yml  pyproject.toml  requirements.txt  search.html  sitemap.xml  smb.txt
about/: index.html
anomaly_detection/: index.html
ceph/: index.html
chart/: index.html
code/: index.html
conda/: index.html
dataframe/: index.html
db/: index.html
docker/: index.html
docs/: about.md  anomaly_detection.md  ceph.md  code.md  conda.md  dataframe.md  db.md  docker.md  embedding.md  framework.md  git.md  gpt.md  hydra.md  index.md  jetson.md  linux.md  literatures.md  llama2.md  llm.md  machine_learning.md  macos.md  mkdocs.md  mqtt.md  mypy.md  nes.md  ollama.md  poetry.md  rag.md  random.md  resume.md  scrape_pad.md  smb.md  smb2.md  softwarearchitecture.md  sprint.md  ssh.md  stable_diffusion.md  sway.md  time_travel.md  training_pipeline.md  (+4 more)
embedding/: index.html
framework/: index.html
git/: index.html
gpt/: index.html
hydra/: index.html
jetson/: index.html
k8s/: index.html
linux/: index.html
linux,md/: index.html
literatures/: index.html
llama2/: index.html
llm/: index.html
machine_learning/: index.html
macos/: index.html
mkdocs/: index.html
mqtt/: index.html
mypy/: index.html
nes/: index.html
ollama/: index.html
poetry/: index.html
rag/: index.html
random/: index.html
resume/: index.html
scrape_pad/: index.html
scripts/: wlr.sh
search/: search_index.json
smb/: index.html
smb2/: index.html
softwarearchitecture/: index.html
(+10 files in other folders)
