[tool.poetry]
name = "124c41"
version = "0.1.0"
description = ""
authors = ["furyhawk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.2"
nbformat = "^5.9.2"
black = "^24.2.0"
mkdocs = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
